<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3">

        <TextView
            android:id="@+id/tvDisplay"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="0"
            android:textSize="35sp"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="3dp"
            />
        <TextView
            android:id="@+id/tvShowDisplay"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="0"
            android:textSize="35sp"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="3dp"
            />
        <TextView
            android:id="@+id/tvDisplayResult"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="0"
            android:textSize="35sp"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="3dp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnAC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="AC"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="#ce0404"
            android:textColor="#ffff"
            android:padding="1dp"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="DEL"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="#ce0404"
            android:textColor="#ffff"
            android:padding="1dp"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/btnDivided"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/div"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="#262424"
            android:textColor="#ffff"
            android:padding="1dp"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/btnMultiplication"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiplication"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="#262424"
            android:textColor="#ffff"
            android:padding="1dp"
            android:layout_margin="1dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="7"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="#262424"
            android:textColor="#ffff"
            android:padding="1dp"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="8"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="#262424"
            android:textColor="#ffff"
            android:padding="1dp"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="9"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="#262424"
            android:textColor="#ffff"
            android:padding="1dp"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="#262424"
            android:textColor="#ffff"
            android:padding="1dp"
            android:layout_margin="1dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="4"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="#262424"
            android:textColor="#ffff"
            android:padding="1dp"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="5"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="#262424"
            android:textColor="#ffff"
            android:padding="1dp"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="6"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="#262424"
            android:textColor="#ffff"
            android:padding="1dp"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="#262424"
            android:textColor="#ffff"
            android:padding="1dp"
            android:layout_margin="1dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">
                <Button
                    android:id="@+id/btnOne"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="1"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="#262424"
                    android:textColor="#ffff"
                    android:padding="1dp"
                    android:layout_margin="1dp"/>
                <Button
                    android:id="@+id/btntwo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="2"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="#262424"
                    android:textColor="#ffff"
                    android:padding="1dp"
                    android:layout_margin="1dp"/>
                <Button
                    android:id="@+id/btnThree"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="3"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="#262424"
                    android:textColor="#ffff"
                    android:padding="1dp"
                    android:layout_margin="1dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnzero"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="0"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="#262424"
                    android:textColor="#ffff"
                    android:padding="1dp"
                    android:layout_margin="1dp"/>
                <Button
                    android:id="@+id/btnPoint"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/point"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="#262424"
                    android:textColor="#ffff"
                    android:padding="1dp"
                    android:layout_margin="1dp"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equal"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="#5799cf"
            android:textColor="#ffff"
            android:padding="4dp"
            android:layout_margin="1dp"/>


    </LinearLayout>

</LinearLayout>